--- a/apache.yml
+++ b/apache.yml
@@ -1,18 +1,39 @@
 ---
-- hosts: webservers 
-  become: True
+- hosts: java-servers
+  become: true
   tasks:
-    - name: Install packages
-      yum:
-        name: "httpd"
-        state: "present"
-    - name: Start Apache server
-      service:
-        name: httpd
-        state: started
-        enabled: True
-    - name: Deploy static website
-      copy:
-        src: index.html
-        dest: /var/www/html/
-...
+  - name: Adding Docker repository
+    yum_repository:
+      name: Docker
+      description: Docker Repo
+      baseurl: https://download.docker.com/linux/centos/7/x86_64/stable
+      gpgcheck: no
+  - name: Installing Docker package
+    package:
+      name:  "docker-ce-18.09.1-3.el7.x86_64"
+      state: present
+  - name: Starting docker service
+    service:
+      name: "docker"
+      state: started
+      enabled: yes
+  - name: Installing Docker SDK for python3
+    command: pip3 install docker
+
+  - name: stop container
+    command: docker stop first-image
+    ignore_errors: yes
+
+  - name: remove container
+    command: docker rm first-image
+    ignore_errors: yes
+
+  - name: remove image
+    command: docker rmi raghu133/first-image
+    ignore_errors: yes
+
+  - name: pulling image from dockerhub
+    command: docker pull raghu133/first-image:0.0.1
+
+  - name: building docker container image and expose
+    command: docker run -d -p 8080:8080 raghu133/first-image:0.0.1
